--- a/templates/foru/love_time.html
+++ b/templates/foru/love_time.html
@@ -107,7 +107,7 @@
 </a>
 <canvas class="canvas" width="1820" height="905"></canvas>
 <p class="text" style="color: #ed3073;">
-    We fell in love
+    <!--We fell in love-->
     <br/>
     <span id="span_dt_dt"></span>
 </p>
